--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,14 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:test
+#h2
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:test
+#spring.jpa.show=true
+#spring.jpa.hibernate.ddl-auto=update
+
+#PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/jobfinder
+spring.datasource.username=olyashelep
+spring.datasource.password=test1234
+spring.jpa.database=POSTGRESQL
 spring.jpa.show=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
